--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,11 @@ dependencies:
   fluttertoast: ^8.2.4
   url_launcher: ^6.2.1
   eventify: ^1.0.1
-
+  image_picker: ^1.0.4
+  firebase_app_check:
+  flutter_html: ^3.0.0-beta.2
+  video_player: ^2.8.1
+  autoscale_tabbarview: ^1.0.2
 dev_dependencies:
   flutter_test:
     sdk: flutter
