--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   flutter_html: ^3.0.0-beta.2
   video_player: ^2.8.1
   autoscale_tabbarview: ^1.0.2
+  flutter_localization:
+  intl:
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -47,7 +49,7 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
-
+  generate: true
   uses-material-design: true
 
   assets:
