--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -45,5 +45,13 @@
 	<true/>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
+	 <key>CFBundleTypeRole</key>
+ <string>Editor</string>
+ <key>CFBundleURLName</key>
+    <string>namnp.page.link</string>
+ <key>CFBundleURLSchemes</key>
+ <array>
+  <string>https</string>
+ </array>
 </dict>
 </plist>
