--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   flutter_localization:
   intl:
   firebase_dynamic_links: ^5.4.8
+  flutter_rating_bar: ^4.0.1
   share_plus: ^7.2.1
   flutter_file_downloader: ^1.2.0
   equatable: ^2.0.5
