--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   awesome_notifications: ^0.8.2
   dio: ^5.4.0
   flutter_inappwebview: ^6.0.0
+  flutter_staggered_grid_view: ^0.7.0
   
 dev_dependencies:
   flutter_test:
