--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,8 @@ dependencies:
   dio: ^5.4.0
   flutter_inappwebview: ^6.0.0
   flutter_staggered_grid_view: ^0.7.0
+  calendar_timeline: ^1.1.2
+
   
 dev_dependencies:
   flutter_test:
