--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   flutter_inappwebview: ^6.0.0
   flutter_staggered_grid_view: ^0.7.0
   calendar_timeline: ^1.1.2
+  shared_preferences: ^2.2.2
 
   
 dev_dependencies:
